<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/generalPadding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expandedHintEnabled="false"
                app:placeholderText="@string/email"
                app:endIconMode="clear_text"
                android:layout_marginVertical="@dimen/halfGeneralPadding"
                >
                <EditText
                    android:id="@+id/emailTV"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:placeholderText="@string/password"
                app:expandedHintEnabled="false"
                android:layout_marginVertical="@dimen/halfGeneralPadding"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passTV"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:background="@drawable/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:paddingVertical="@dimen/generalPadding"
                android:layout_marginVertical="@dimen/halfGeneralPadding"
                android:id="@+id/signInBtn"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_not_have_an_account"
                    />

                <TextView
                    android:id="@+id/loginScreenText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:layout_marginStart="@dimen/halfGeneralPadding"
                    android:text="@string/sign_up"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>